fix(header): hide desktop navigation on tablet
-Prevent desktop navigation from displaying on tablet viewports

--- a/styles/style.css
+++ b/styles/style.css
@@ -955,6 +955,10 @@
     border-bottom-right-radius: 24rem;
   }
 
+  .header__nav-blk {
+    display: none
+  }
+
   /* MAIN */
   /* CALL TO ACTION SECTION */
 
